out/production/CarServiceOrg/src/objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Compare_Cities__c</fullName>
        <formula>Mechanic__r.City__c ==   Workshop__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Cities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Date__c</fullName>
        <formula>TEXT(MONTH(Start_Date__c))&amp;&quot;/&quot;&amp;TEXT(DAY(Start_Date__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechani_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Mechanic__r.Id ,  Mechanic__r.Full_Name__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mechanic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mechanic</label>
        <referenceTo>Mechanic__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Plus_One_Year__c</fullName>
        <formula>ADDMONTHS( Start_Date__c ,12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Plus One Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF((TODAY() &lt;  Start_Date__c) || (TODAY() &gt;  End_Date__c), IMAGE(&quot;/servlet/servlet.FileDownload?file=0152p000006Bd1e&quot;, &quot;RedSquare&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0152p000006Bd1Z&quot;, &quot;GreenSquare&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Date_Plus_One_Year__c</columns>
        <columns>Status__c</columns>
        <columns>Display_Date__c</columns>
        <columns>Mechanic__c</columns>
        <columns>Workshop__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CON-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Day_After_Start_Day</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Day can&apos;t be before Start Day.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Day_After_Today</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be after today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
        <errorMessage>Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>